added script in shop

--- a/index.html
+++ b/index.html
@@ -25,10 +25,9 @@
     <div class="services">
       <ul id="service">
         <li id="nav"><a href="./index.html">Home</a></li>
-        <li id="nav"><a href="./services/Shop.html">Shop</a></li>
+        <li id="nav" class="shop"><a href="./services/Shop.html">Shop</a></li>
         <li id="nav"><a href="./services/Categories.html">Categories</a></li>
         <li id="nav"><a href="./services/About.html">About</a></li>
-        <li id="nav"><a href="./services/Contact.html">Contact</a></li>
       </ul>
     </div>
   </nav>
