--- a/services/About.html
+++ b/services/About.html
@@ -11,17 +11,16 @@
     <!--navbar-->
     <nav class="shop_nav">
      <a href="../index.html"><img src="../img/back.png"></a>
-     <p><i>About us</i></p>
      <img src="../img/trolly.png" class="trolly">
    </nav>
    <!--close navbar-->
 
    <!--About our company-->
     <div class="mission">
-       <p>Ntswaki's Baking Company</p>
+       <p>Pastry Paradise</p>
     </div>
     <div class="company_info">
-      <p>Ntswaki's Baking Company is all about serving our costumers with luscious 
+      <p>Pastry Paradise is all about serving our costumers with luscious 
          food.Anything you want that is baked can be found here. Currently we supporting
          only 5 countries which are South Africa, Botswana , Namibia , France and Brazil.</p>
          <img src="../img/team.jpg">
