--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
           <button id="order">OrderNow</button>
 
         </div>
+      <div class="childImg">
             <img src="./img/cake3.jpg">
+      </div>    
       </div>
 
       <div class="grand-child2">
@@ -57,7 +59,9 @@
           <button id="order">OrderNow</button>
 
         </div>
+      <div class="childImg">
           <img src="./img/cookie1.jpg">
+      </div>  
       </div>
 
       <div class="grand-child3">
@@ -70,7 +74,9 @@
 
 
         </div><!--end of productDetail-->
-           <img src="./img/muffin1.jpg">
+      <div class="childImg">
+           <img src="./img/muffin2.jpg">
+      </div>   
       </div><!--end of grandChild3-->
 
     </div><!--end of sub-box-child1-->
